<resources>
    <string name="app_name">Sweden 4 All AB</string>
    <string name="app_id">Application ID</string>
    <string name="appointments">Appointments</string>
    <string name="about_me">About me</string>
    <string name="about_us">About us</string>
    <string name="account">Account</string>
    <string name="agenda_to_meet">Agenda to meet</string>
    <string name="app_status">Application Status</string>
    <string name="already_account">Already have an account?</string>
    <string name="are_faqs_not_able">Are FAQs not able to answer you?</string>
    <string name="ask_ques">Ask Question</string>
    <string name="cat_title">category title</string>
    <string name="chk_status">Check Status</string>
    <string name="chng_pwd">Change Password</string>
    <string name="contact_us">Contact us</string>
    <string name="comments">Comments</string>
    <string name="city">City</string>
    <string name="cnfrm_pwd">Confirm Password</string>
    <string name="country">Country</string>
    <string name="delete">Delete</string>
    <string name="dob">Date of birth</string>
    <string name="edit">Edit</string>
    <string name="email">Email</string>
    <string name="faqs">FAQs</string>
    <string name="fb_page_link">www.facebook.com/swedenforall</string>
    <string name="home">Home</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="make_appoint">Make an Appointment</string>
    <string name="meet_with_sweden">Meet with Sweden4All AB</string>
    <string name="messenger">Messenger</string>
    <string name="name">Name</string>
    <string name="new_msg">New Message</string>
    <string name="new_pwd">New Password</string>
    <string name="no_account">New here?</string>
    <string name="old_pwd">Old Password</string>
    <string name="phone">Phone</string>
    <string name="plz_enter_app_id">Please enter application id</string>
    <string name="profile">Profile</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="pwd">Password</string>
    <string name="push_noti">Push Notifications</string>
    <string name="results">Results</string>
    <string name="select_cat">Select Category</string>
    <string name="select_date">Select Date</string>
    <string name="select_hour">Select your hour</string>
    <string name="select_timings">Select Timings</string>
    <string name="send_req">Send Request</string>
    <string name="settings">Settings</string>
    <string name="services">Services</string>
    <string name="sign_up">Sign up</string>
    <string name="status">Status</string>
    <string name="submit">Submit</string>
    <string name="sweden_mig_sol">Sweden Migration Solutions</string>

    <!-- MESSAGES -->
    <string name="no_internet">Please enable internet</string>
    <string name="acc_created">Account created successfully!</string>
    <string name="logged_in">Logged in successfully!</string>
    <string name="no_chngs_made">No changes made</string>
    <string name="pick_time">Pick a time that works for you</string>
    <string name="pick_date">Please pick the date</string>
    <string name="no_cat_selected">No category selected</string>
    <string name="no_time_selected">No time selected</string>
    <string name="appoint_done_msg">Appointment request has been received, soon you\'ll receive confirmation</string>
    <string name="acc_inactive_contact">Account temporarily suspended. Please contact support</string>
    <string name="profile_updated">Profile updated successfully</string>
    <string name="cnfrm_del_app">Delete Appointment?</string>
    <string name="u_sure_to_del_app">Are you sure you want to delete this appointment?</string>
    <string name="old_pwd_incorrect">Old Password is incorrect</string>
    <string name="new_pwd_must_b_diff_than_old">New Password must be different than Old Password</string>
    <string name="new_cnfrm_dont_match">New and Confirm Password doesn\'t match</string>
    <string name="plz_cnfrm">Please Confirm?</string>
    <string name="u_sure_want_to_logout">Are you sure, you want to log out?</string>
    <string name="a"></string>
</resources>