<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@mipmap/ic_profile"
        android:title="@string/home" />

    <item
        android:id="@+id/profile"
        android:icon="@mipmap/ic_profile"
        android:title="@string/profile" />

    <item
        android:id="@+id/appointments"
        android:icon="@mipmap/ic_settings"
        android:title="@string/appointments" />

    <item
        android:id="@+id/messenger"
        android:icon="@mipmap/ic_profile"
        android:title="@string/messenger" />

    <item
        android:id="@+id/app_status"
        android:icon="@mipmap/ic_settings"
        android:title="@string/app_status" />

    <item
        android:id="@+id/settings"
        android:icon="@mipmap/ic_profile"
        android:title="@string/settings" />

    <item
        android:id="@+id/services"
        android:icon="@mipmap/ic_settings"
        android:title="@string/services" />

    <item
        android:id="@+id/about_us"
        android:icon="@mipmap/ic_profile"
        android:title="@string/about_us" />

    <item
        android:id="@+id/contact_us"
        android:icon="@mipmap/ic_settings"
        android:title="@string/contact_us" />

    <item
        android:id="@+id/faqs"
        android:icon="@mipmap/ic_profile"
        android:title="@string/faqs" />

    <item
        android:id="@+id/logout"
        android:icon="@mipmap/ic_settings"
        android:title="@string/logout" />

</menu>