<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/inc_toolbar_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <com.sweden4all.components.MEditText
            android:id="@+id/et_old"
            style="@style/Field_Bg_Stroke_Gray_cccccc_Corner_8"
            android:layout_marginBottom="30dp"
            android:hint="@string/old_pwd" />

        <com.sweden4all.components.MEditText
            android:id="@+id/et_new"
            style="@style/Field_Bg_Stroke_Gray_cccccc_Corner_8"
            android:layout_marginBottom="10dp"
            android:hint="@string/new_pwd" />

        <com.sweden4all.components.MEditText
            android:id="@+id/et_cnfrm"
            style="@style/Field_Bg_Stroke_Gray_cccccc_Corner_8"
            android:layout_marginBottom="30dp"
            android:hint="@string/cnfrm_pwd" />

        <com.sweden4all.utils.RippleView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/rv_submit"
            style="@style/Wrap_Width_RippleView"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp">

            <com.sweden4all.components.MTextView
                style="@style/RippleView_Text"
                android:text="@string/submit"
                app:fontName="Roboto_Bold" />
        </com.sweden4all.utils.RippleView>
    </LinearLayout>
</LinearLayout>