<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fonts="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <include layout="@layout/inc_toolbar" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:fonts="http://schemas.android.com/apk/res-auto"
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null">

        <LinearLayout
            android:id="@+id/ll_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/form_fields_margin_bottom">

                <com.sweden4all.components.MEditText
                    android:id="@+id/et_name"
                    style="@style/Form_Fields_ET"
                    android:hint="@string/name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/form_fields_margin_bottom">

                <com.sweden4all.components.MEditText
                    android:id="@+id/et_email"
                    style="@style/Form_Fields_ET"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/form_fields_margin_bottom">

                <com.sweden4all.components.MEditText
                    android:id="@+id/et_phone"
                    style="@style/Form_Fields_ET"
                    android:hint="@string/phone"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/form_fields_margin_bottom">

                <com.sweden4all.components.MEditText
                    android:id="@+id/et_city"
                    style="@style/Form_Fields_ET"
                    android:hint="@string/city" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/form_fields_margin_bottom">

                <com.sweden4all.components.MEditText
                    android:id="@+id/et_country"
                    style="@style/Form_Fields_ET"
                    android:hint="@string/country" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/form_fields_margin_bottom">

                <com.sweden4all.components.MEditText
                    android:id="@+id/et_dob"
                    style="@style/Form_Fields_ET"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/dob"
                    android:inputType="none" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/form_fields_margin_bottom">

                <com.sweden4all.components.MEditText
                    android:id="@+id/et_pwd"
                    style="@style/Form_Fields_ET"
                    android:hint="@string/pwd"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/form_fields_margin_bottom">

                <com.sweden4all.components.MEditText
                    android:id="@+id/et_cnfrm_pwd"
                    style="@style/Form_Fields_ET"
                    android:hint="@string/cnfrm_pwd"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <com.sweden4all.utils.RippleView
                android:id="@+id/rv_sign_up"
                style="@style/Wrap_Width_RippleView"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/solid_gray_no_stroke_corner_20"
                android:enabled="false">

                <com.sweden4all.components.MTextView
                    style="@style/RippleView_Text"
                    android:text="@string/sign_up"
                    fonts:fontName="Roboto_Bold" />
            </com.sweden4all.utils.RippleView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.sweden4all.components.MTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/already_account"
                    fonts:fontName="Roboto_Regular" />

                <com.sweden4all.utils.RippleView
                    android:id="@+id/rv_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="6dp">

                    <com.sweden4all.components.MTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        fonts:fontName="Roboto_Black" />
                </com.sweden4all.utils.RippleView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>