<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fonts="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <include layout="@layout/inc_toolbar" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:fonts="http://schemas.android.com/apk/res-auto"
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null">

        <LinearLayout
            android:id="@+id/ll_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="60dp">

            <com.sweden4all.components.MTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="30sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/form_fields_margin_bottom"
                android:layout_marginTop="40dp">

                <com.sweden4all.components.MEditText
                    android:id="@+id/et_email"
                    style="@style/Form_Fields_ET"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:text="w@gmail.com" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.sweden4all.components.MEditText
                    android:id="@+id/et_pwd"
                    style="@style/Form_Fields_ET"
                    android:hint="@string/pwd"
                    android:inputType="textPassword"
                    android:text="abc" />

            </android.support.design.widget.TextInputLayout>

            <com.sweden4all.utils.RippleView
                android:id="@+id/rv_login"
                style="@style/Match_Width_RippleView"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="40dp">

                <com.sweden4all.components.MTextView
                    style="@style/RippleView_Text"
                    android:text="@string/login"
                    fonts:fontName="Roboto_Bold" />
            </com.sweden4all.utils.RippleView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.sweden4all.components.MTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/no_account"
                    fonts:fontName="Roboto_Regular" />

                <com.sweden4all.utils.RippleView
                    android:id="@+id/rv_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="6dp">

                    <com.sweden4all.components.MTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up"
                        fonts:fontName="Roboto_Black" />
                </com.sweden4all.utils.RippleView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>